# kerokero

./: .gitignore  CLAUDE.md  LICENSE  README.md  ROADMAP.md  pyproject.toml
.claude/commands/: devlog.md
.github/workflows/: auto-fix.yml
devlog/: 2026-03-13.md  2026-03-14.md  README.md
docs/: kerokero_day2_spec.md  kerokero_day3_spec.md
docs/adr/: 0002-external-triggers-and-async-evaluation.md
docs/files/: gemini_25day_vocab.md  gemini_os_prompt.md
docs/reference/: hyakunin_isshu_prompt.md
docs/research/: pre-task-planning.md
docs/specs/: v0.3-coach-mode.md
profiles/: sales_english.toml
scripts/auto-fix/: auto-fix-config.yml
src/kerokero/: __init__.py  __main__.py  main.py
tests/: test_config.py  test_evaluate.py  test_parse.py  test_session.py  test_topic.py
topics/: ielts.json
